# trianer

./: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.fastapi  Dockerfile.streamlit  GLOSSARY.md  HOWTO.md  MANIFEST.in  Makefile  README.md  README.rst  __init__.py  app.py  app_fastapi.py  app_old.py  config.mk  pubspec.yaml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  setup.sh  streamlit_app.py  streamlit_app2.py  streamlit_app3.py
.dart_tool/: package_config.json  package_config_subset
.streamlit/: config.toml
core/: tools.py
data/: Barden.gpx  Bois_le_Roi_L_cycling.gpx  Bois_le_Roi_L_running.gpx  Bois_le_Roi_L_swimming.gpx  Chtriman_XL_cycling.gpx  Chtriman_XL_running.gpx  Deauville_L_cycling.gpx  Deauville_M_cycling.gpx  Deauville_XL_cycling.gpx  Elsassman_L_cycling.gpx  Elsassman_M_running.gpx  Elsassman_S_cycling.gpx  Elsassman_S_running.gpx  Elsassman_S_swimming.gpx  Gorges du Tavignano.gpx  Monte Cinto.gpx  Nice_XL_cycling.gpx  Nice_XL_running.gpx  ParisJO_Marathon.gpx  Paris_Ecotrail.gpx  Paris_M_cycling.gpx  Paris_M_running.gpx  Paris_M_swimming.gpx  Paris_Marathon.gpx  Saint-Raphael_M_cycling.gpx  Saint-Raphael_M_running.gpx  Saint-Raphael_M_swimming.gpx  Saint-Raphael_S_cycling.gpx  Saint-Raphael_S_running.gpx  Saint-Raphael_S_swimming.gpx  __init__.py  hermann.json
hello/: views.py
lib/: anim_icon.dart  gauge.dart  main.dart  wheel.dart
notebooks/: FromScratch.ipynb  calories.ipynb  freediving.ipynb  physiology.ipynb  triathlon.ipynb
tests/: A Maniccia.gpx  Barden.gpx  (+4 more)
(+177 files in other folders)
