[metadata]
name = trianer
version = attr:trianer.__version__.__version__
long_description = file: README.md
classifiers =
    Framework :: Streamlit
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: OS Independent

[options]
packages = find:
recommended_python = 3.10

[options.entry_points]
console_scripts =
    trianer-run = trianer.report.tasks:main
    trianer-vetruve = trianer:generate_version_vetruve
    trianer-push = trianer.strapp:push

